--- a/arnold/workspace/Portfolio.html
+++ b/arnold/workspace/Portfolio.html
@@ -14,7 +14,16 @@
     </div>
     
     
-    <p style="color:white;">This class/The amount of work I've done for this class=0</p>
+   <table style="width:100%">
+  <tr>
+    <th>
+            <ul id="menu">
+    <li>
+    <p style="color:white;">check out the game me and my partner made for computer science</p>
+    <a href="https://scratch.mit.edu/projects/249643989/" target="_blank"><img src="images/Last_Hope.jpg" alt="Star Wars Last Hope" width="470" height="270"> </a>
+    </li>
+    </ul>
+  </tr>
 
 
     </body>
