--- a/arnold/workspace/Portfolio.html
+++ b/arnold/workspace/Portfolio.html
@@ -22,9 +22,12 @@
     <p style="color:white;">check out the game me and my partner made for computer science</p>
     <a href="https://scratch.mit.edu/projects/249643989/" target="_blank"><img src="images/Last_Hope.jpg" alt="Star Wars Last Hope" width="470" height="270"> </a>
     </li>
+    <li>
+    <p style="color:white;">check out another game made for computer science</p>
+    <a href="https://repl.it/@ArnoldoBravo/Trash" target="_blank"><font color="#FFFFFF">Text Adventure Game</a></li>
+    </li>
     </ul>
   </tr>
-
 
     </body>
 </html>
